banner-text-changed

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
             <div class="banner-left">
                 <div class="left-side">
                     <h2>Programming Hero</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, molestias. Alias non perferendis nostrum magni velit reprehenderit debitis voluptas voluptatem harum deleniti! Aut libero, suscipit assumenda magnam molestias quo
-                        obcaecati!
+                    <p>This is my own creation.Thanks to all who teach us HTML and CSS specially Programming hero community and the team.Jhanker Mahbub sir is our Motivetor and icon of programming in Modern web technology.Thank U too.
                     </p>
                     <a href="http://www.youtube.com" target="_blank" rel="noopener noreferrer">Explore Now</a>
                 </div>
